compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__case__alternative_pattern_variable_rewriting.snap
---
source: compiler-core/src/erlang/tests/case.rs
assertion_line: 6
expression: "\npub fn myfun(mt) {\n  case mt {\n    1 | _ ->\n      1\n      |> Ok\n  }\n  1\n  |> Ok\n}\n"
---
----- SOURCE CODE

pub fn myfun(mt) {
  case mt {
    1 | _ ->
      1
      |> Ok
  }
  1
  |> Ok
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([myfun/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec myfun(integer()) -> {ok, integer()} | {error, any()}.
myfun(Mt) ->
    case Mt of
        1 ->
            _pipe = 1,
            {ok, _pipe};

        _ ->
            _pipe = 1,
            {ok, _pipe}
    end,
    _pipe@1 = 1,
    {ok, _pipe@1}.
