compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__case__negative_zero_pattern.snap
---
source: compiler-core/src/erlang/tests/case.rs
assertion_line: 39
expression: "\npub fn main(x) {\n  case x {\n    -0.0 -> 1\n    _ -> 2\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main(float()) -> integer().
main(X) ->
    case X of
        -0.0 ->
            1;

        _ ->
            2
    end.
