compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__case__not_two.snap
---
source: compiler-core/src/erlang/tests/case.rs
assertion_line: 66
expression: "pub fn main(x, y) {\n  case x {\n    _ if !y && !x -> 0\n    _ -> 1\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/2]).

-file("/root/project/test/my/mod.rakun", 1).
-spec main(boolean(), boolean()) -> integer().
main(X, Y) ->
    case X of
        _ when not Y andalso not X ->
            0;

        _ ->
            1
    end.
