compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__case__spread_empty_list_assigning.snap
---
source: compiler-core/src/erlang/tests/case.rs
assertion_line: 94
expression: "\npub fn main() {\n  case [] {\n    [..rest] -> rest\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> list(any()).
main() ->
    case [] of
        Rest ->
            Rest
    end.
